# skill_trainer

./: .gitignore  README.md  README.zh-CN.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py  storage.py
backend/app/services/: distill.py  experiments.py  exporter.py  ingest.py  llm_distill.py  preview.py
backend/user_twin_studio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: interaction-flow-refactor.md  product-prd-ideal-flow.md  product-ux-iteration-log.md  ui-ux-redesign.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  twin-redesign.css  types.ts
frontend/src/components/: EvidenceDrawer.tsx  FlowNavCoachTips.tsx  PersonaGlyph.tsx  ReadinessPanel.tsx  SectionPreviewCard.tsx  StageRail.tsx  StudioLoadingIndicator.tsx  StudioToast.tsx  TrainingClaimCard.tsx  ValidationFlowNav.tsx
frontend/src/layout/: StudioLayout.tsx
frontend/src/lib/: evidence-highlight.ts  export-zip.ts  format.ts  stages.ts  studio-context.ts  studio-loading-reasons.ts  studio-onboarding.ts  studio.tsx  training-helpers.ts
frontend/src/pages/: AutoExperimentPage.tsx  ExperimentLeaderboardPage.tsx  MaterialsLibraryPage.tsx  MaterialsPage.tsx  OverviewPage.tsx  PatchQueuePage.tsx  PreviewFeedbackPage.tsx  PreviewRunPage.tsx  PublishExportsPage.tsx  PublishPage.tsx  StartPage.tsx  TrainingClaimsPage.tsx  TrainingPage.tsx  TrainingProfilePage.tsx
scripts/: browser_walkthrough.py
